--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "array.prototype.find": "x.x",
     "node-find-files": "x.x",
-    "nedb": "^0.10.6",
     "tough-cookie": "^0.12.1",
     "sequence": "^3.0.0",
     "es6-promise": "^1.0.0",
     "forallasync": "^1.0.2",
-    "stdio": "^0.1.6"
+    "stdio": "^0.1.6",
+    "nedb": "^0.11.0"
   }
 }
