--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "private": true,
   "dependencies": {
     "array.prototype.find": "x.x",
-    "node-find-files": "x.x",
-    "tough-cookie": "^0.12.1",
-    "sequence": "^3.0.0",
+    "ascii-progress": "^1.0.5",
     "es6-promise": "^1.0.0",
     "forallasync": "^1.0.2",
+    "fs-extra": "^3.0.1",
+    "nedb": "^0.11.0",
+    "node-find-files": "x.x",
+    "progress": "^2.0.0",
+    "progress-stream": "^2.0.0",
+    "request": "^2.81.0",
+    "request-debug": "^0.2.0",
+    "request-progress": "^3.0.0",
+    "requestretry": "^1.12.0",
+    "sequence": "^3.0.0",
     "stdio": "^0.1.6",
-    "nedb": "^0.11.0"
+    "tough-cookie": "^0.12.1"
   }
 }
